--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SpaceWalkers</title>
 
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
@@ -15,13 +15,23 @@
 </head>
 
 <body>
-
- <!-- navigation code here -->
+<header class="navigation">
+  <nav>
+    <h1>SpaceWalkers</h1>
+    <div>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+      <a href="#">Sign In</a>
+    </div>
+  </nav>
+</header>
 
   <div class="container home">
 
     <header class="intro">
-       <!-- image code here -->
+      <img src="img/main-header.png" alt="">
 
       <h2>Lift Off</h2>
     
