added stretch: subscription form

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
       </div>
 
     </section>
+    <form action="" class="contact-form">
+      <h1>Subscribe to SpaceWalkers Magazine!</h1>
+            <input class="form-input" type="text" name="firstName" placeholder="First Name">
+            <input class="form-input" type="text" name="lastName" placeholder="Last Name">
+            <input class="form-input" type="email" name="email" placeholder="Email Address">
+            <input class="form-input" type="tel" name="phone" placeholder="Phone Number">
+            <textarea class="message" name="message" placeholder="Message"></textarea>
+            <button class="submitBtn">Subscribe</button>
+        </form>
+
 
     <footer>
       <p>Copyright SpaceWalkers 2018</p>
